[package]
name = "lifec-poem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lifec = { git = "https://github.com/juliusl/lifec.git", branch = "main" }
poem = { version = "1.3.32", features = ["server", "static-files"] }
tokio = "1.19.2"
